--- a/css/carousel.css
+++ b/css/carousel.css
@@ -205,9 +205,6 @@
     color: #888;
   }
   
-  /* Media Queries for Responsive Design */
-  
-  /* Tablets (portrait and landscape) */
   @media only screen and (min-width: 481px) and (max-width: 1024px) {
     /* Navbar responsive adjustments */
     .nav-menu {
@@ -227,12 +224,10 @@
       width: 100%;
     }
     
-    /* Stats display */
     .stats-container {
       justify-content: center;
     }
     
-    /* Box layout adjustment */
     .box {
       flex-direction: column;
     }
@@ -240,12 +235,12 @@
     .left-box, .right-box {
       width: 100%;
     }
-    
-    /* Company logos */
     .co-list {
-      flex-wrap: wrap;
+      /* flex-wrap: wrap; */
       justify-content: center;
       gap: 15px;
+      display: flex;
+      flex-direction: column;
     }
     
     .company {
@@ -362,15 +357,25 @@
       margin-bottom: 15px;
     }
     
-    /* Company logos */
+    /* Company logos updated layout */
     .co-list {
-      flex-direction: column;
-      align-items: center;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 24px;
+        margin-left: 32px;
     }
-    
-    .company {
-      width: 150px;
-      margin-bottom: 15px;
+
+    .co-list img {
+        width: 140px;
+        height: auto;
+        margin: 0;
+    }
+
+    .seen {
+        text-align: left;
+        width: 100%;
+        margin: 32px 0;
+        padding-left: 32px;
     }
     
     /* Product images */
